# fetch-atcoder-submission

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: atcoder.py  main.py
