[tool.poetry]
name = "fetch-atcoder-submission"
version = "0.1.0"
description = ""
authors = ["yu7400ki <yu7400ki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
mypy = "^0.981"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
flake8-builtins = "^1.5.3"
pre-commit = "^2.20.0"
pyproject-flake8 = "^5.0.4.post1"
types-requests = "^2.28.11"
types-beautifulsoup4 = "^4.11.6"
types-tqdm = "^4.64.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,"
exclude = [
    ".git",
    ".venv",
    ]

[tool.black]
target-version = ["py310"]
line-length = 119
include = "\\.pyi?$"
exclude = """
(
      \\.git
    | \\.venv
)
"""

[tool.isort]
py_version = 310
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.10"
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
